barrer le prox et enlever la possibilité df'ajouter dans le panier pour le produis dépendant d'un pack ou dans le panier ou dépendant d'un produit dans le panier

--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -1,20 +1,37 @@
+#SET{exclus,#ARRAY}
+[(#REM)Les produits dans le panier]
+    <BOUCLE_panier(PANIERS_LIENS){id_panier=#SESSION{id_panier}}{objet=prix_objet}>
+        <BOUCLE_article(PRIX_OBJETS){id_prix_objet=#ID_OBJET}{objet=article}>
+        #SET{exclus,#GET{exclus}|push{#ID_OBJET}}
+        </BOUCLE_article>
+    </BOUCLE_panier>
 
+#SET{id_objet_dest,#LISTE{#ENV{id_article_base}}}
+#SET{id_objet_dest,#GET{id_objet_dest}|array_merge{#GET{exclus}}}
 #SET{utilises,#ARRAY}
-<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
+[(#REM)Les produits d'un pack ou dans le panier]
+<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest IN #GET{id_objet_dest}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
 #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
 </BOUCLE_objets>
+
 
 <B_objets_precieux>
 <section class="prix">
     <h2><:paniers:prix:></h2>
     <div class="vente liste_objets_precieux">
         <BOUCLE_objets_precieux(PRIX_OBJETS){id_objet}{objet}>
+        [(#ID_OBJET|in_array{#GET{utilises}}|oui)#SET{utilise,oui}]
         #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
         [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
         [(#PRIX|>{0}|?{#SET{ttc,oui},#SET{ttc,''})}]   
-        [(#GET{prix_ht})] [(#ENV{id_objet}|devise_defaut|traduire_devise)] ([(#GET{taxe}|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
-        #SET{retour,#SELF|parametre_url{retour,ok}}
-        <a class="ajax nohistory plus" href="#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}}" title="<:paniers:action_ajouter:>">[(#CHEMIN{images/plus.png}|image_reduire{15})]</a>
+        [<span[(#GET{utilise}|oui) class="utilise"]>(#GET{prix_ht})] [(#ENV{id_objet}|devise_defaut|traduire_devise)</span>] ([(#GET{taxe}|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
+                #SET{retour,#SELF|parametre_url{retour,ok}}
+        [(#GET{utilise}|ou{#ID_OBJET|in_array{#GET{exclus}}}|oui|?{
+            <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> ,
+                    <a class="ajax nohistory plus" href="#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}}" title="<:paniers:action_ajouter:>">[(#CHEMIN{images/plus.png}|image_reduire{15})]
+            </a>
+        })]
+            
         </BOUCLE_objets_precieux>
      
     </div>
