--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -1,3 +1,5 @@
+#CACHE{0}
+
 #SET{exclus,#ARRAY}
 [(#REM)Les produits dans le panier]
     <BOUCLE_panier(PANIERS_LIENS){id_panier=#SESSION{id_panier}}{objet=prix_objet}>
