inclure récursivement les dépendances des dépendances

--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -11,9 +11,15 @@
 #SET{id_objet_dest,#LISTE{#ENV{id_article_base}}}
 #SET{id_objet_dest,#GET{id_objet_dest}|array_merge{#GET{exclus}}}
 #SET{utilises,#ARRAY}
-[(#REM)Les produits compris dans un pack présent ou contenu dans le panier]
-<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest IN #GET{id_objet_dest}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
+[(#REM)Les produits compris dans le pack présent ou contenu dans le panier ou compris dans un pack sélectionné]
+<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest IN #GET{id_objet_dest}}
+{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
 #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
+    <BOUCLE_objets_deps(SELECTION_OBJETS)
+    {id_objet_dest=#ID_OBJET}{objet_dest=#OBJET_DEST}{type_lien IN compris_pack,pack_base}{par ordre}>
+    #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
+        <BOUCLE_re(BOUCLE_objets_deps)> </BOUCLE_re>
+    </BOUCLE_objets_deps>
 </BOUCLE_objets>
 
 
