--- a/squelettes/content/article_fonctionnalites.html
+++ b/squelettes/content/article_fonctionnalites.html
@@ -4,7 +4,7 @@
 
 <article class="content-principal">
     [(#REM)Le panier]
-        <INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}/>
+        <INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},id_article_base=#GET{id_article},env,ajax=mon_panier}/>
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
@@ -13,7 +13,7 @@
     <section class="body_content">
         [<aside class="right">
         [(#REM)Les prix]
-        <INCLURE{fond=inclure/prix,id_objet=#GET{id_article},objet=article,ajax}/>
+        <INCLURE{fond=inclure/prix,id_objet=#GET{id_article},id_article_base=#GET{id_article},objet=article,ajax}/>
         [(#REM)Les Contenus liés]
             (#INCLURE{fond=inclure/contenu_lie,objet_dest=article,id_objet_dest=#GET{id_article},type_lien=utilise_par_site,env})
         </aside>]        
