--- a/squelettes/content/article.html
+++ b/squelettes/content/article.html
@@ -4,7 +4,7 @@
 
 <article class="content-principal">
     [(#REM)Le panier]
-        <INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},id_article_base=#GET{id_article},env,ajax=mon_panier}/>
+        <INCLURE{fond=inclure/mon_panier,objet=article,id_objet=#GET{id_article},id_article_base=#GET{id_article},env,ajax=mon_panier}/>
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
