--- a/squelettes/inclure/panier_details.html
+++ b/squelettes/inclure/panier_details.html
@@ -1,6 +1,6 @@
 #SET{utilises,#ARRAY}
 <BOUCLE_cond(CONDITION){si  #ENV{voir}|oui}>
-    <div class="details ajax">    
+    <div class="details">    
     <BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
     #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
     </BOUCLE_objets>
@@ -32,7 +32,7 @@
     <B_ispanier>
     <div id="panier_wrap">
         #SET{retour,#SELF|parametre_url{retour,ok}}
-       #FORMULAIRE_PANIER
+       <div class="ajax">#FORMULAIRE_PANIER</div>
         <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
             [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
             <BOUCLE_article_suitepanier(ARTICLES){id_rubrique=-1}>
