--- a/squelettes/inclure/ajaxreload.html
+++ b/squelettes/inclure/ajaxreload.html
@@ -3,7 +3,7 @@
         ajaxReload('mon_panier', { });
         });
        [(#ENV**{message_ok}|oui)
-        $('.formulaire_spip').attr("style","position: absolute; top: 55%; left: 0; font-size: 150%;background:transparent;border:none;display:none;width: 96%;text-align:center;z-index:1");
+        $(.content-principal .formulaire_spip').attr("style","position: absolute; top: 55%; left: 0; font-size: 150%;background:transparent;border:none;display:none;width: 96%;text-align:center;z-index:1");
          $('.formulaire_spip').show(2200);
         ]        
 </script>
