--- a/squelettes/extra2/selection.html
+++ b/squelettes/extra2/selection.html
@@ -1,10 +1,4 @@
-<div class="details" id="panier_wrap">
-    <h3><:paniers:titre_panier:></h3>   
-    <div class="ajax">#FORMULAIRE_PANIER</div>
-     <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
-            [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
-    </BOUCLE_ispanier>
-</div>
+<INCLURE{fond=extra2/mon_panier,ajax=mon_panier}/>
 <br class="nettoyeur"/>
 [(#SESSION{id_auteur}|non)
     [<div id="abonne_login" [class="(#ENV{mail}|=={oui}|oui)mailshow"]>
