ouvrir le login en mediabox

--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -8,7 +8,9 @@
     <div class="login">
         [<span class="sep">
         (#SESSION{id_auteur}|oui)</span><a href="#URL_LOGOUT" rel="nofollow"><:icone_deconnecter:></a>][<span class="sep">
-        (#SESSION{id_auteur}|non)</span><a href="[(#URL_PAGE{login}|parametre_url{url,#SELF|parametre_url{url,''}})]" rel="nofollow" class='login_modal'><:lien_connecter:></a>][<span class="sep">
+        (#SESSION{id_auteur}|non)</span><a href="[(#URL_PAGE{login}|parametre_url{url,#SELF})]"
+    rel="nofollow" target="_blank"
+    onclick="if (jQuery.modalbox) {jQuery.modalbox('[(#URL_PAGE{login}|parametre_url{url,#SELF}|parametre_url{var_zajax,content})]');return false;}" ><:lien_connecter:></a>][<span class="sep">
         (#AUTORISER{ecrire})</span><a href="#EVAL{_DIR_RESTREINT_ABS}"><:espace_prive:></a>]
     </div>    
 </aside>    
