--- a/squelettes/content/login.html
+++ b/squelettes/content/login.html
@@ -5,12 +5,10 @@
 [(#ENV{url}|match{^#EVAL{_DIR_RESTREINT_ABS}}|?{#SET{prive,' '}})]
 
 
-<article class="content-principal">
-    [(#REM)Le panier]
-     #INCLURE{fond=inclure/mon_panier,env,objet=article,id_objet=#GET{id_article},env,ajax=mon_panier}      
+<article class="contenu-principal">
 	<header class="cartouche">
 		[<h1 class="h1">(#GET{prive}|?{<:login_acces_prive:>,<:lien_connecter:>})</h1>]
 		<p class="soustitre">#NOM_SITE_SPIP</p>
 	</header>
-	[(#FORMULAIRE_LOGIN{#ENV{url}|sinon{#URL_ECRIRE{accueil}}})]
+	[<div class="ajax">(#FORMULAIRE_LOGIN{#ENV{url}|sinon{#URL_ECRIRE{accueil}}})</div>]
 </article>
