pas besoin du br

--- a/squelettes/extra2/selection.html
+++ b/squelettes/extra2/selection.html
@@ -1,5 +1,6 @@
+<INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang}/>
 <INCLURE{fond=extra2/mon_panier,ajax=mon_panier}/>
-<br class="nettoyeur"/>
+
 [(#SESSION{id_auteur}|non)
     [<div id="abonne_login" [class="(#ENV{mail}|=={oui}|oui)mailshow"]>
         <h3><:shop:deja_client:></h3>
