h2 pour le nom du site

--- a/squelettes/content/login.html
+++ b/squelettes/content/login.html
@@ -8,7 +8,7 @@
 <article class="contenu-principal">
 	<header class="cartouche">
 		[<h1 class="h1">(#GET{prive}|?{<:login_acces_prive:>,<:lien_connecter:>})</h1>]
-		<p class="soustitre">#NOM_SITE_SPIP</p>
+		<h2 class="soustitre">#NOM_SITE_SPIP</h2>
 	</header>
 	[<div class="ajax">(#FORMULAIRE_LOGIN{#ENV{url}|sinon{#URL_ECRIRE{accueil}}})</div>]
 </article>
