--- a/squelettes/notifications/contenu_commande_mail.html
+++ b/squelettes/notifications/contenu_commande_mail.html
@@ -22,7 +22,8 @@
 <p><:commandes:modifier_commande_statut:> [(#STATUT|commandes_lister_statuts)]</p>
 
 <p><:commandes:details_commande:></p>
-<INCLURE{fond=inclure/commande,id_commande=#ID_COMMANDE,statut=#STATUT,format_envoi=#ENV{format_envoi}}>
+<INCLURE{fond=inclure/commande,commande=#ARRAY{details,#ENV**{options}|table_valeur{commande}},statut=#STATUT,format_envoi=#ENV{format_envoi}}>
+
 <hr />
 
 <p><a href="#URL_SITE_SPIP">#URL_SITE_SPIP</a></p>
