--- a/squelettes/inclure/mon_panier.html
+++ b/squelettes/inclure/mon_panier.html
@@ -1,21 +1,22 @@
-#CACHE{3600}
+#CACHE{0}
 <aside id="mon_panier" class="fenetre_container">
      <h2 class="#ENV{objet}_#ID_OBJET"><a class="panier" href="[(#SELF|parametre_url{voir,#ENV{voir}|?{'',oui}})]"><:paniers:titre_panier:></a><span class="compteur"><INCLURE{fond=inclure/compteur_panier}/></span></h2>
-       <INCLURE{fond=inclure/panier_details,env,ajax=mon_panier}/>
+       <INCLURE{fond=inclure/panier_details,env,ajax=mon_panier_details}/>
 </aside> 
 
 [(#REM) ouvrir et fermer le panier]
 <script type="text/javascript">
-    jQuery(document).ready(function(){
-    $("#mon_panier h2.#ENV{objet}_#ID_OBJET").click(function() {
-
+    $(function(){
+    $("#mon_panier h2.#ENV{objet}_#ID_OBJET").click(function(e) {
+            e.preventDefault(); 
             if($("#mon_panier .details").length!=0){
               $("#mon_panier .details").toggle(1000);
             } 
-            else ajaxReload('mon_panier', {
+            else ajaxReload('mon_panier_details', {
                 args:{
                     voir:'oui',objet:'#ENV{objet}',id_objet:'#ENV{id_objet}'
-                    }
+                    },
+                history:false
                   }
                 );
        $('#mon_panier').toggleClass('panier_open');  
@@ -23,3 +24,4 @@
   });
 });    
 </script>
+
