--- a/squelettes/inclure/panier_details.html
+++ b/squelettes/inclure/panier_details.html
@@ -1,5 +1,5 @@
 #SET{utilises,#ARRAY}
-<BOUCLE_cond(CONDITION){si  #ENV{voir}|oui}>
+<BOUCLE_cond(CONDITION){si #ENV{voir}|=={oui}|oui}>
     <div class="details">    
     <BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
     #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
@@ -31,7 +31,7 @@
 
     <B_ispanier>
     <div id="panier_wrap">
-        #SET{retour,#SELF|parametre_url{retour,ok}}
+        #SET{retour,#SELF|parametre_url{retour,ok}|parametre_url{action,''}}
        <div class="ajax">#FORMULAIRE_PANIER</div>
         <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
             [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
@@ -50,3 +50,18 @@
 </BOUCLE_cond>
   <br class="invisible"/>
 <//B_cond>
+<script type="text/javascript">
+    $(function(){
+    $('#panier_wrap .bouton_action_post').submit(function(e) {
+      e.preventDefault(); // don't submit multiple times
+   this.submit(); // use the native submit method of the form element
+    setTimeout(function(){ // Delay for Chrome
+         ajaxReload('mon_panier', {
+             callback:function(){ajaxReload('prix', {args:{retour:'non',action:''},history:false});},
+             args:{voir:'',retour:'non'},
+             history:false
+             });
+    }, 500);
+    });
+    });    
+</script>
