--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -36,7 +36,7 @@
                 #SET{retour,#SELF|parametre_url{retour,ok}}
         [(#GET{utilise}|ou{#ID_OBJET|in_array{#GET{exclus}}}|oui|?{
             <img src="[(#CHEMIN{images/tick_16.png})]" alt="ok"/> ,
-                    <a class="ajax nohistory plus" href="#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}}" title="<:paniers:action_ajouter:>">[(#CHEMIN{images/plus.png}|image_reduire{15})]
+            <a class="ajax nohistory" href="[(#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}})]" title="<:paniers:action_ajouter:>">[(#CHEMIN{images/plus.png}|image_reduire{15})]
             </a>
         })]
             
@@ -45,11 +45,15 @@
     </div>
 </section>
 </B_objets_precieux>
-
- [(#ENV{retour}|oui)
+ [(#ENV{retour}|=={ok}|oui)
 <script type="text/javascript">
-    jQuery(document).ready(function(){
-        ajaxReload('mon_panier', { });
+    $(function(){
+
+        ajaxReload('mon_panier', {
+            args:{voir:'',retour:''},
+            history:false
+        });
+        return false;
         });      
 </script>
 ]  
