--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -12,16 +12,8 @@
 <INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang,id_article}/>
 
 
+<INCLURE{fond=inclure/submenu,id_parent=#GET{id_racine},lang,env,ajax}/>
 
-<B_rubriques>
-    <ul class="menu-items submenu">
-    <BOUCLE_rubriques(RUBRIQUES){id_parent=#GET{id_racine}}{id_trad!=24}{tout}{par num titre,titre}>
-    	<li class="item sub_item">
-    	    <a class="mouseover" href="#URL_RUBRIQUE" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION">[(#TITRE|couper{50})]</a>       
-    	 </li>
-    </BOUCLE_rubriques>
-    </ul>
-</B_rubriques>
 
 [(#ENV{id_trad}|=={2}|oui)
-<INCLURE{fond=inclure/menus_sites,id_rubrique=#ENV{id_trad}}/>]
+<INCLURE{fond=inclure/menus_sites,id_rubrique=#ENV{id_trad},env,ajax}/>]
