changer direction de la flêche quand le panier et ouvert

--- a/squelettes/inclure/mon_panier.html
+++ b/squelettes/inclure/mon_panier.html
@@ -1,7 +1,10 @@
 #CACHE{0}
 #SET{compteur_panier,#INCLURE{fond=inclure/compteur_panier,session}}
 <aside id="mon_panier" class="fenetre_container[ (#GET{compteur_panier}|>{0}|oui)panier_remplis]">
-     <h2 class="#ENV{objet}_#ID_OBJET"><a class="panier" href="[(#SELF|parametre_url{voir,#ENV{voir}|?{'',oui}})]"><:paniers:titre_panier:></a><span class="down"><img src="#CHEMIN{images/down_16.png}" alt="flêche"/></span><span class="compteur">[(#GET{compteur_panier}|>{0}|oui)#GET{compteur_panier}]</span></h2>
+     <h2 class="#ENV{objet}_#ID_OBJET"><a class="panier" href="[(#SELF|parametre_url{voir,#ENV{voir}|?{'',oui}})]"><:paniers:titre_panier:></a>
+         <span class="down"><img src="#CHEMIN{images/down_16.png}" alt="down"/></span>
+         <span class="up"><img src="#CHEMIN{images/up_16.png}" alt="up"/></span>         
+         <span class="compteur">[(#GET{compteur_panier}|>{0}|oui)#GET{compteur_panier}]</span></h2>
        <INCLURE{fond=inclure/panier_details,env,ajax=mon_panier_details}/>
 </aside> 
 
