introduction ne réupère pas le descriptif chez les rubriques

--- a/squelettes/modeles_so/home.html
+++ b/squelettes/modeles_so/home.html
@@ -2,5 +2,5 @@
     <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
 [<div class="text">
-    (#INTRODUCTION)
+    <p>(#DESCRIPTIF**|sinon{#INTRODUCTION**})</p>
 </div>]
