--- a/squelettes/inclure/submenu.html
+++ b/squelettes/inclure/submenu.html
@@ -2,7 +2,7 @@
     <ul class="menu-items submenu">
     <BOUCLE_rubriques(RUBRIQUES){id_parent}{id_trad!=24}{tout}{par num titre,titre}>
         <li class="item sub_item">
-            <a class="mouseover ajax" href="#URL_RUBRIQUE" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION">[(#TITRE|couper{50})]</a>       
+            <a class="mouseover ajax" href="#URL_RUBRIQUE" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION" data-meta_title="[(#TITRE|supprimer_numero) - ]#NOM_SITE_SPIP" data-meta_description="[(#INTRODUCTION|supprimer_tags|texte_script)]">[(#TITRE|couper{50})]</a>       
          </li>
     </BOUCLE_rubriques>
     </ul>
@@ -17,9 +17,17 @@ $(function() {
         var composition=attr[2];
         var id_groupe=attr[3];      
         var id=objet+'_'+id_objet;
+        var title=$(this).attr('data-meta_title');
+        var description=$(this).attr('data-meta_description'); 
+        var canonical=$(this).attr('href');                
         ajaxReload(
             'content', 
-                {args:{
+                {callback:function(){
+                    $('title').html(title);
+                    $('meta[name=description]').replaceWith('<meta name="description" content="'+description+'">'); 
+                    $('link[rel=canonical]').replaceWith('<link href="#URL_SITE_SPIP/'+canonical+'" rel="canonical">');                                        
+                },
+                 args:{
                        'type-page':objet,
                        id_rubrique:id_objet,
                        composition:composition,
