--- a/squelettes/modeles_so/home_logo_auteurs.html
+++ b/squelettes/modeles_so/home_logo_auteurs.html
@@ -7,7 +7,7 @@
 #SET{rotation,0}
 <B_auteur>
     <div class="images">
-<BOUCLE_auteur(AUTEURS){statut=0minirezo}{tout}{par hasard}{0,2}>
+<BOUCLE_auteur(AUTEURS){id_auteur IN 5,1}{tout}{par hasard}{0,2}>
    #SET{compteur,#COMPTEUR_BOUCLE}
    <B_portraits>
     <div class="image image_#GET{compteur}">
