afficher différement les menus rub selectionnés

--- a/squelettes/inclure/submenu.html
+++ b/squelettes/inclure/submenu.html
@@ -1,7 +1,7 @@
 <B_rubriques>
     <ul class="menu-items submenu">
     <BOUCLE_rubriques(RUBRIQUES){id_parent}{id_trad!=24}{tout}{par num titre,titre}>
-        <li class="item sub_item">
+        <li class="item sub_item[ (#EXPOSE)][(#COMPTEUR_BOUCLE|=={1}|oui) first][(#COMPTEUR_BOUCLE|=={#TOTAL_BOUCLE}|oui) last]">
             <a class="mouseover ajax" href="#URL_RUBRIQUE" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION" data-meta_title="[(#TITRE|supprimer_numero) - ]#NOM_SITE_SPIP" data-meta_description="[(#INTRODUCTION|supprimer_tags|texte_script)]">[(#TITRE|couper{50})]</a>       
          </li>
     </BOUCLE_rubriques>
@@ -23,6 +23,13 @@ $(function() {
         ajaxReload(
             'content', 
                 {callback:function(){
+                      ajaxReload(
+                        'submenu', {
+                            args:{
+                               id_rubrique:id_objet,
+                               }
+                        }
+                    );
                     $('title').html(title);
                     $('meta[name=description]').replaceWith('<meta name="description" content="'+description+'">'); 
                     $('link[rel=canonical]').replaceWith('<link href="#URL_SITE_SPIP/'+canonical+'" rel="canonical">');                                        
