pas besoins de reloqd si l'id_rubrique pqsse dqns l'url

--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -12,7 +12,7 @@
 <INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang,id_article}/>
 
 
-<INCLURE{fond=inclure/submenu,id_parent=#GET{id_racine},lang,env,ajax=submenu}/>
+<INCLURE{fond=inclure/submenu,id_parent=#GET{id_racine},lang,env,ajax}/>
 
 
 [(#ENV{id_trad}|=={2}|oui)
