alt pour le logo

--- a/squelettes/extra2/site.html
+++ b/squelettes/extra2/site.html
@@ -1,7 +1,7 @@
 <INCLURE{fond=inclure/menu_packs,id_rubrique,id_trad=3,lang}/>
 <BOUCLE_content(SITES){id_syndic}>
 <div class="logo_site">
-[<a href="#URL_SITE">(#LOGO_SITE|image_reduire{245,*})</a>]
+[<a href="#URL_SITE">(#LOGO_SITE|image_reduire{245,*}|inserer_attribut{alt,#NOM_SITE})</a>]
 </div>
 </BOUCLE_content>
 <br class="nettoyeur"/>
