--- a/squelettes/contenus.html
+++ b/squelettes/contenus.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="background:none;font-family: arial; text-align:left; font-size:12px">
-
+    <INCLURE{fond=inclure/menu_langues,env}/>
 <INCLURE{fond=inclure/plan,exclus=18,id_rubrique,ajax,env}/>
 </body>
 </html>
