--- a/squelettes/inclure/panier_details.html
+++ b/squelettes/inclure/panier_details.html
@@ -34,7 +34,7 @@
         #SET{retour,#SELF|parametre_url{retour,ok}|parametre_url{action,''}}
        <div class="ajax">#FORMULAIRE_PANIER</div>
         <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
-            [(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
+            [(#BOUTON_ACTION{<:paniers:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#GET{retour}},ajax})]
             <BOUCLE_article_suitepanier(ARTICLES){id_rubrique=-1}>
                [(#PAGE|=={suitepanier}|oui)<div class="texte #EDIT{texte}">#TEXTE</div>]
             </BOUCLE_article_suitepanier>
