--- a/squelettes/inclure/inc-options_details.html
+++ b/squelettes/inclure/inc-options_details.html
@@ -1,5 +1,6 @@
 <BOUCLE_article(ARTICLES){id_article}>
-    <dt class="row">
+    <BOUCLE_trad(ARTICLES){traduction}{lang}>
+        <dt class="row">
                 #SET{id_article,''}
                  [(#ENV{faq}|=={faq}|?{
                      #SET{id_article,#ID_ARTICLE}
@@ -9,13 +10,36 @@
                  })]
                 <span class="close">+</span>
             <span class="titre">[(#ENV{titre,#TITRE}|extraire_multi|supprimer_numero)]</span>
-        [(#ENV{faq}|=={faq}|non)</a>]
-    </dt>     
-    [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
-         <INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,env,expl= (<:htva:>),ajax}/>
-        [<div>
-            (#INTRODUCTION)
-            </div>]
-        <div><a href="#URL_ARTICLE" title="TITRE"><:zcore:lire_la_suite:></a></div>            
-    </dd>]
+            [(#ENV{faq}|=={faq}|non)</a>]
+        </dt>     
+        [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
+             <INCLURE{fond=inclure/prix,objet=article,id_objet=#ENV{id_article},env,expl= (<:htva:>),ajax}/>
+            [<div>
+                (#INTRODUCTION)
+                </div>]
+            <div><a href="#URL_ARTICLE" title="TITRE"><:zcore:lire_la_suite:></a></div>            
+        </dd>]
+    </BOUCLE_trad>
+        <BOUCLE_or(ARTICLES){traduction}{origine_traduction}>
+            <dt class="row">
+                    #SET{id_article,''}
+                     [(#ENV{faq}|=={faq}|?{
+                         #SET{id_article,#ID_ARTICLE}
+                          <span class="open">-</span>
+                         ,
+                         <a  class="closed" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST"  href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles}}|parametre_url{id_article_base,#ID_OBJET_DEST})]">
+                     })]
+                    <span class="close">+</span>
+                <span class="titre">[(#ENV{titre,#TITRE}|extraire_multi|supprimer_numero)][#LANG]</span>
+                [(#ENV{faq}|=={faq}|non)</a>]
+            </dt>     
+            [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
+                 <INCLURE{fond=inclure/prix,objet=article,id_objet=#ENV{id_article},env,expl= (<:htva:>),ajax}/>
+                [<div>
+                    (#INTRODUCTION)
+                    </div>]
+                <div><a href="#URL_ARTICLE" title="TITRE"><:zcore:lire_la_suite:></a></div>            
+            </dd>]
+        </BOUCLE_or>
+    <//B_trad>
 </BOUCLE_article>
