--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -25,7 +25,7 @@
 
 <B_objets_precieux>
 <section class="prix">
-    <h2><:paniers:prix:></h2>
+    <h2><:shopprix:prix:></h2>
     <div class="vente liste_objets_precieux">
         <BOUCLE_objets_precieux(PRIX_OBJETS){id_objet}{objet}>
         [(#ID_OBJET|in_array{#GET{utilises}}|oui)#SET{utilise,oui}]
