--- a/squelettes/inclure/submenu.html
+++ b/squelettes/inclure/submenu.html
@@ -2,7 +2,7 @@
     <ul class="menu-items submenu">
     <BOUCLE_rubriques(RUBRIQUES){id_parent}{id_trad!=24}{tout}{par num titre,titre}>
         <li class="item sub_item[ (#EXPOSE)][(#COMPTEUR_BOUCLE|=={1}|oui) first][(#COMPTEUR_BOUCLE|=={#TOTAL_BOUCLE}|oui) last]">
-            <a class="mouseover ajax" href="[(#URL_RUBRIQUE|parametre_url{id_rubrique,#ID_RUBRIQUE})]" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION-[(#ID_TRAD|=={0}|?{#ID_RUBRIQUE,#ID_TRAD})] data-meta_title="[(#TITRE|supprimer_numero) - ]#NOM_SITE_SPIP" data-meta_description="[(#INTRODUCTION|supprimer_tags|texte_script)]">[(#TITRE|couper{50})]</a>       
+            <a class="mouseover ajax" href="[(#URL_RUBRIQUE|parametre_url{id_rubrique,#ID_RUBRIQUE})]" title="#TITRE" data-target="rubrique-#ID_RUBRIQUE-#COMPOSITION-[(#ID_TRAD|=={0}|?{#ID_RUBRIQUE,#ID_TRAD})]" data-meta_title="[(#TITRE|supprimer_numero) - ]#NOM_SITE_SPIP" data-meta_description="[(#INTRODUCTION|supprimer_tags|texte_script)]">[(#TITRE|couper{50})]</a>       
          </li>
     </BOUCLE_rubriques>
     </ul>
