prendre l'id_rubrique courant

--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -22,4 +22,4 @@
 
 
 [(#ENV{id_trad}|=={2}|oui)
-<INCLURE{fond=inclure/menus_sites,id_rubrique=#ENV{id_trad},env,ajax}/>]
+<INCLURE{fond=inclure/menus_sites,id_rubrique,env,ajax}/>]
