ouvrir les traductions

--- a/squelettes/sommaire.html
+++ b/squelettes/sommaire.html
@@ -1,4 +1,2 @@
-[(#REM)
-#LANGUE_PREFEREE_SECTEUR_REDIRECTION
-]
-<INCLURE{fond=rubrique,id_rubrique=14}/>
+#LANGUE_PREFEREE_SECTEUR_REDIRECTION{30,31}
+
