--- a/squelettes/inclure/menu_langues.html
+++ b/squelettes/inclure/menu_langues.html
@@ -3,10 +3,10 @@
 <BOUCLE_article(ARTICLES){id_article}>
 <B_traductions>
 <div class="traductions formulaire_menu_lang">
-	<BOUCLE_traductions(ARTICLES) {traduction} {par lang}>[(#TOTAL_BOUCLE|>{1}|?{' '})
-	<span lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
+	<BOUCLE_traductions(ARTICLES) {traduction} {par lang}{lang IN fr,en}>[(#TOTAL_BOUCLE|>{1}|?{' '})
+	<div lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
 		[(#EXPOSE{'',<a href="[(#URL_ACTION_AUTEUR{'converser',#LANG&var_lang=#LANG,[(#URL_ARTICLE|parametre_url{lang,'','&'})]}|parametre_url{arg,''})]" rel="alternate" hreflang="#LANG"[ title="(#TITRE|attribut_html|couper{80})"]>})]
-		[(#LANG|traduire_nom_langue)]#EXPOSE{'',</a>}</span>
+		[(#LANG|traduire_nom_langue)]#EXPOSE{'',</a>}</div>
 	]</BOUCLE_traductions>
 </div>
 </B_traductions>
@@ -14,27 +14,28 @@
 	[(#REM) Sinon, si on est dans le contexte d'une rubrique, on affiche les langues des rubriques]
 	<B_rubrique>
 		<div class="traductions formulaire_menu_lang">
-	   <BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}>
-		   <BOUCLE_traductions_rub(RUBRIQUES) {traduction} {par lang}{tout}>
-	        <span lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
+	   <BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}></BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}>
+		   <BOUCLE_traductions_rub(RUBRIQUES) {traduction} {par lang}{tout}{lang IN fr,en}>
+	        <div lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
 	        	[(#ENV{lang}|=={#LANG}|non)
 					<a href="[(#URL_ACTION_AUTEUR{'converser',#LANG&var_lang=#LANG,[(#URL_RUBRIQUE|parametre_url{lang,'','&'})]}|parametre_url{arg,''})]" rel="alternate" hreflang="#LANG"[ title="(#TITRE|attribut_html|couper{80})"]>[(#LANG|traduire_nom_langue)]
 					</a>]
 	        	[(#ENV{lang}|=={#LANG}|oui)[(#LANG|traduire_nom_langue)]]
-	        </span>
+	        </div>
 			</BOUCLE_traductions_rub>
        </BOUCLE_rubrique>
 		</div>
 	</B_rubrique>
 	[(#REM) Sinon, si on on boucle sur les langues disponibles dans le public grâce à spip-bonux]
            [(#SET{langues,[(#CONFIG{langues_utilisees}|explode{','}|serialize)]})]
+           [(#SET{langues,#LISTE{fr,en}})]           
            <B_langue_possibles>
 			   <div class="traductions formulaire_menu_lang">
               <BOUCLE_langue_possibles(POUR){tableau #GET{langues}}>
-                 <span lang="#VALEUR" xml:lang="#VALEUR" dir="#LANG_DIR"[(#ENV{lang}|=={#VALEUR}|oui) class="on"]>
+                 <div lang="#VALEUR" xml:lang="#VALEUR" dir="#LANG_DIR"[(#ENV{lang}|=={#VALEUR}|oui) class="on"]>
                          [(#ENV{lang}|=={#VALEUR}|non)<a href="[(#URL_ACTION_AUTEUR{'converser',#VALEUR&var_lang=#VALEUR,[(#SELF|parametre_url{lang,'','&'})]}|parametre_url{arg,''})]" rel="alternate" hreflang="#VALEUR">[(#VALEUR|traduire_nom_langue)]</a>]
                          [(#ENV{lang}|=={#VALEUR}|oui)[(#VALEUR|traduire_nom_langue)]]
-				</span>
+				</div>
                 </BOUCLE_langue_possibles> 
                 </div>
              </B_langue_possibles>   	
