distinguer les news

--- a/squelettes/content/article-news.html
+++ b/squelettes/content/article-news.html
@@ -10,7 +10,7 @@
 		<h1 class="h1 #EDIT{titre}">#TITRE</h1>
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
-   [<section class="#EDIT{hyperlien} hyperlien"><a href="(#URL_SITE)" class="spip_out"><:websimple:voir_article_origine:></a></section>]
+   [<section class="#EDIT{hyperlien} hyperlien news"><a href="(#URL_SITE)" class="spip_out"><:websimple:voir_article_origine:></a></section>]
     <section class="body_content">
         [<aside class="right">
         [(#REM)Les prix]
