--- a/squelettes/inclure/menu_langues.html
+++ b/squelettes/inclure/menu_langues.html
@@ -3,7 +3,7 @@
 <BOUCLE_article(ARTICLES){id_article}>
 <B_traductions>
 <div class="traductions formulaire_menu_lang">
-	<BOUCLE_traductions(ARTICLES) {traduction} {par lang}{lang IN fr,en}>[(#TOTAL_BOUCLE|>{1}|?{' '})
+	<BOUCLE_traductions(ARTICLES) {traduction} {par lang}>[(#TOTAL_BOUCLE|>{1}|?{' '})
 	<div lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
 		[(#EXPOSE{'',<a href="[(#URL_ACTION_AUTEUR{'converser',#LANG&var_lang=#LANG,[(#URL_ARTICLE|parametre_url{lang,'','&'})]}|parametre_url{arg,''})]" rel="alternate" hreflang="#LANG"[ title="(#TITRE|attribut_html|couper{80})"]>})]
 		[(#LANG|traduire_nom_langue)]#EXPOSE{'',</a>}</div>
@@ -15,7 +15,7 @@
 	<B_rubrique>
 		<div class="traductions formulaire_menu_lang">
 	   <BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}></BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}>
-		   <BOUCLE_traductions_rub(RUBRIQUES) {traduction} {par lang}{tout}{lang IN fr,en}>
+		   <BOUCLE_traductions_rub(RUBRIQUES) {traduction} {par lang}{tout}>
 	        <div lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
 	        	[(#ENV{lang}|=={#LANG}|non)
 					<a href="[(#URL_ACTION_AUTEUR{'converser',#LANG&var_lang=#LANG,[(#URL_RUBRIQUE|parametre_url{lang,'','&'})]}|parametre_url{arg,''})]" rel="alternate" hreflang="#LANG"[ title="(#TITRE|attribut_html|couper{80})"]>[(#LANG|traduire_nom_langue)]
@@ -27,8 +27,7 @@
 		</div>
 	</B_rubrique>
 	[(#REM) Sinon, si on on boucle sur les langues disponibles dans le public grâce à spip-bonux]
-           [(#SET{langues,[(#CONFIG{langues_utilisees}|explode{','}|serialize)]})]
-           [(#SET{langues,#LISTE{fr,en}})]           
+           [(#SET{langues,[(#CONFIG{langues_utilisees}|explode{','}|serialize)]})]        
            <B_langue_possibles>
 			   <div class="traductions formulaire_menu_lang">
               <BOUCLE_langue_possibles(POUR){tableau #GET{langues}}>
