--- a/squelettes/inclure/menu_langues.html
+++ b/squelettes/inclure/menu_langues.html
@@ -14,7 +14,7 @@
 	[(#REM) Sinon, si on est dans le contexte d'une rubrique, on affiche les langues des rubriques]
 	<B_rubrique>
 		<div class="traductions formulaire_menu_lang">
-	   <BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}></BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}>
+	   <BOUCLE_rubrique(RUBRIQUES){id_rubrique}{tout}>
 		   <BOUCLE_traductions_rub(RUBRIQUES) {traduction} {par lang}{tout}>
 	        <div lang="#LANG" xml:lang="#LANG" dir="#LANG_DIR"[ class="(#EXPOSE)"]>
 	        	[(#ENV{lang}|=={#LANG}|non)
