--- a/squelettes/content/rubrique-realisations.html
+++ b/squelettes/content/rubrique-realisations.html
@@ -1,5 +1,5 @@
 <BOUCLE_content(RUBRIQUES){id_rubrique}{tout}>
- #SET{id_rubrique,#ID_RUBRIQUE}
+ #SET{id_rubrique,#ID_TRAD}
     [(#ID_TRAD|>{0}|oui)#SET{id_rubrique,#ID_TRAD}]
     <article class="content-principal">
     [(#REM)Le panier]
