optimizer la boucle

--- a/squelettes/inclure/inc-realisations_articles.html
+++ b/squelettes/inclure/inc-realisations_articles.html
@@ -4,16 +4,12 @@
 [(#REM) On définit les articles à afficher]
 
 <BOUCLE_articles_sel(ARTICLES) {id_mot}{!par date}>
-	<BOUCLE_devs(ARTICLES) {id_article}{id_trad !IN #GET{id_trad}}{lang}>	[(#ID_TRAD|!={0}|oui) #SET{id_trad,#GET{id_trad}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_TRAD}}}]
+	<BOUCLE_devs(ARTICLES) {traduction}{id_trad !IN #GET{id_trad}}{lang}>	[(#ID_TRAD|!={0}|oui) #SET{id_trad,#GET{id_trad}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_TRAD}}}]
 	[(#SET{id_article,#GET{id_article}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_ARTICLE}}})]								
 	</BOUCLE_devs>	
-		<BOUCLE_devs2(ARTICLES)  {traduction}{id_trad !IN #GET{id_trad}}{lang}>	[(#ID_TRAD|!={0}|oui)#SET{id_trad,#GET{id_trad}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_TRAD}}}]
-		[(#SET{id_article,#GET{id_article}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_ARTICLE}}})]				
-		</BOUCLE_devs2>	
 			<BOUCLE_devs3(ARTICLES)  {traduction}{origine_traduction}{id_trad !IN #GET{id_trad}}>	[(#ID_TRAD|!={0}|oui)#SET{id_trad,#GET{id_trad}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_TRAD}}}]
 			[(#SET{id_article,#GET{id_article}|array_merge{#ARRAY{#COMPTEUR_BOUCLE,#ID_ARTICLE}}})]		
 			</BOUCLE_devs3>														
-		<//B_devs2>
 	<//B_devs>			
 	</BOUCLE_art>					
 </BOUCLE_articles_sel>
@@ -46,5 +42,5 @@
 	</ul>
 [<br class="nettoyeur"/>
 <p class="pagination">(#PAGINATION)</p>]	
-</section
+</section>
 </B_articles>
