--- a/squelettes/modeles_so/home_site_slider.html
+++ b/squelettes/modeles_so/home_site_slider.html
@@ -2,5 +2,5 @@
     <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
 <div class="slider">
-    [(#MODELE{sjcycle_sites}{id_sjcycle=16,width=200,height=300,lien_article=171})]
+    [(#MODELE{sjcycle_sites}{id_sjcycle=16,width=200,height=300,lien_article=171,transition=500,duree=3000})]
 </div>
